CHANGELOG
---------

- 2015/11/07 0.7.0 release.
    - Issue 67: Confirm behavior with Python 3.5
    - Issue 68: Update README with dependencies for dev & testing
    - Issue 69: Read in version string from file

- 2015/05/02 0.6.0 release.
    - Issue 34: Add support for feature constraint parsing 

- 2015/04/18 0.5.1 release.
    - Issue 48: Object destructor for MeCab dumps core in 0.5.0

- 2015/04/17 0.5.0 release.
    - Issue 35: Use new Model- and Lattice-based C APIs internally
    - Issue 36: Make refs to MeCab and Tagger consistent in docs
    - Issue 37: Partial parsing and handling of tokens
    - Issue 38: Downloads and license badges for README.md & API docs

- 2015/03/31 0.4.0 release.
    - Issue 21: Cleaned up Lattice-related API call.
    - Issue 23: Implemented support for theta option on Lattice.
    - Issue 25: Enhanced tokenization to remove whitespace for partial parse.
    - Issue 26: Updated to docs/index.rst for new MeCab home at github. 

- 2015/03/19 0.3.0 release.
    - Added morpheme boundary constraint parsing.
    - Minor corrections to docs/index.rst formatting. 

- 2015/03/19 0.3.0 release.
    - Pulled.

- 2015/02/22 0.2.1 release.
    - Enhancement for Issue 11: Debugging should use a kwarg. 
    - On-going improvements and clarifications to natto-py documentation.

- 2015/02/22 0.2.0 release.
    - Pulled.

- 2015/01/02: 0.1.0 release.
    - Issue 9: Refactored Python 23 support logic. 
    - On-going improvements and clarifications to natto-py documentation.

- 2014/12/31: 0.0.9 release.
    - MeCab: libpath attribute returns absolute path to MeCab library.
    - DictionaryInfo: filepath attribute returns absolute path to dictionary.
    - Improvements and clarifications to natto-py documentation.

- 2014/12/02: 0.0.8 release.
    - Issue 10: now returning a Generator instead of an array when parsing into
      nodes.
    - Cleaning up the README.rst and comments a bit.

- 2014/11/24: 0.0.7 release.