@@ -231,31 +231,34 @@ This example uses the ``-F`` node-format option to customize the resulting
 - ``%s`` - node ``stat`` status value, 1 is ``unknown``
 
 Note that any such morphemes captured will have node ``stat`` status of 1 (unknown)::
+ 
+    import re
 
     with MeCab('-F%m,\s%f[0],\s%s') as nm:
 
-        text = '心の中で3回唱え、 ヒーロー見参！ヒーロー見参！ヒーロー見参！'
-        pattern = 'ヒーロー見参'
+        text = '俺は努力したよっ？ お前の10倍、いや100倍1000倍したよっ！'
+        pattern = re.compile('10+倍') 
 
         for n in nm.parse(text, boundary_constraints=pattern, as_nodes=True):
     ...     print(n.feature)
     ...
-    心, 名詞, 0
+    俺, 名詞, 0
+    は, 助詞, 0
+    努力, 名詞, 0
+    し, 動詞, 0
+    たよっ, 動詞, 0
+    ？, 記号, 0
+    お前, 名詞, 0
     の, 助詞, 0
-    中, 名詞, 0
-    で, 助詞, 0
-    3, 名詞, 1
-    回, 名詞, 0
-    唱え, 動詞, 0
+    10倍, 名詞, 1
     、, 記号, 0
-    ヒーロー見参, 名詞, 1
-    ！, 記号, 0
-    ヒーロー見参, 名詞, 1
-    ！, 記号, 0
-    ヒーロー見参, 名詞, 1
+    いや, 接続詞, 0
+    100倍, 名詞, 1
+    1000倍, 名詞, 1
+    し, 動詞, 0
+    たよっ, 動詞, 0
     ！, 記号, 0
     EOS
-
 
 With feature constraint parsing, you can provide instructions to MeCab
 on what feature to use for a matching morpheme. Use the 
@@ -323,7 +326,7 @@ Please see the ``CHANGELOG`` for the release history.
 
 Copyright
 ---------
-Copyright |copy| 2015, Brooke M. Fujita. All rights reserved. Please see
+Copyright |copy| 2016, Brooke M. Fujita. All rights reserved. Please see
 the ``LICENSE`` file for further details.
 
 .. |version| image:: https://badge.fury.io/py/natto-py.svg
