@@ -51,7 +51,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'natto-py'
-copyright = u'2015, Brooke M. Fujita'
+copyright = u'2016, Brooke M. Fujita'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
