@@ -199,7 +199,7 @@ class MeCabEnv(object):
         return _fn(path, name, start_key)
 
 '''
-Copyright (c) 2015, Brooke M. Fujita.
+Copyright (c) 2016, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
