@@ -1,12 +1,12 @@
 # -*- coding: utf-8 -*-
 '''Version and version info for the natto-py package.'''
 
-__version__ = '0.7.0'
-__version_info__ = (0, 7, 0)
+__version__ = '0.8.0'
+__version_info__ = (0, 8, 0)
 
 
 '''
-Copyright (c) 2015, Brooke M. Fujita.
+Copyright (c) 2016, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
