@@ -58,7 +58,7 @@ except StandardError as err:
     raise EnvironmentError(err)
 
 '''
-Copyright (c) 2015, Brooke M. Fujita.
+Copyright (c) 2016, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
