@@ -68,7 +68,7 @@ class TestMeCabEnv(unittest.TestCase):
             os.environ[environment.MeCabEnv.MECAB_PATH] = orig
 
 '''
-Copyright (c) 2015, Brooke M. Fujita.
+Copyright (c) 2016, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
