@@ -363,7 +363,7 @@ class TestMecab(unittest.TestCase, Test23Support):
 
 
 '''
-Copyright (c) 2015, Brooke M. Fujita.
+Copyright (c) 2016, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
