@@ -114,7 +114,7 @@ class TestSupport(unittest.TestCase, Test23Support):
         self.assertEqual(expected, actual)
 
 '''
-Copyright (c) 2015, Brooke M. Fujita.
+Copyright (c) 2016, Brooke M. Fujita.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
